--- a/project/assets/scss/components/_process-timeline.scss
+++ b/project/assets/scss/components/_process-timeline.scss
@@ -66,6 +66,7 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    margin-bottom: 1rem;
   }
 
   &__content-card {
